# Video1.github.io

./: .breakpoints  db.sqlite3  pyproject.toml
django_project/: asgi.py  routing.py  settings.py  urls.py
share/: admin.py  consumer.py  models.py  urls.py  views.py
share/migrations/: 0001_initial.py  0002_c_id_user.py
share/static/: phone.2.js  phone.js  phone3.js  phone_2w.js  pre_proto.js
share/template/: home.draw  home.php
