[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
channels = "4.0.0"
plan = "^0.5"
requests = "^2.28.2"
daphne = "4.0.0"
[tool.poetry.dev-dependencies]
